<resources>
    <string name="app_name">Hillo World</string>
    <string name="title_home">Home</string>
    <string name="title_about_me">About Me</string>
    <string name="title_photos">Photos</string>
    <string name="title_study">Study</string>
    <string name="title_chat">Chat</string>
    <string name="title_tools">Tools</string>
    <string name="title_to_do_list">To Do List</string>
    <string name="title_news">News</string>
    <string name="message_title">Let\'s Chat</string>
</resources>
