<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/item_navigation_photos"
        android:icon="@drawable/ic_photos_black_24dp"
        android:title="@string/title_photos" />

    <item
        android:id="@+id/item_navigation_chat"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/item_navigation_study"
        android:icon="@drawable/ic_study_black_24dp"
        android:title="@string/title_study"/>

    <item
        android:id="@+id/item_navigation_about_me"
        android:icon="@drawable/ic_about_me_black_24dp"
        android:title="@string/title_about_me"/>

</menu>
