<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sdz.hilloworld.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_study"
        android:name="com.sdz.hilloworld.ui.task.TaskFragment"
        android:label="@string/title_study"
        tools:layout="@layout/fragment_study" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.sdz.hilloworld.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_about_me"
        android:name="com.sdz.hilloworld.ui.aboutMe.AboutMeFragment"
        android:label="@string/title_about_me"
        tools:layout="@layout/fragment_about_me"/>

    <fragment
        android:id="@+id/navigation_photos"
        android:name="com.sdz.hilloworld.ui.photos.PhotosFragment"
        android:label="@string/title_photos"
        tools:layout="@layout/fragment_photos"/>

</navigation>